docs/api/qiskit/0.19/qiskit.ignis.verification.ProcessTomographyFitter.mdx
---
title: ProcessTomographyFitter (v0.19)
description: API reference for qiskit.ignis.verification.ProcessTomographyFitter in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.ignis.verification.ProcessTomographyFitter
---

# ProcessTomographyFitter

<Class id="qiskit.ignis.verification.ProcessTomographyFitter" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.3/qiskit/ignis/verification/tomography/fitters/process_fitter.py" signature="ProcessTomographyFitter(result, circuits, meas_basis='Pauli', prep_basis='Pauli')" modifiers="class">
  Maximum-Likelihood estimation process tomography fitter.

  Initialize tomography fitter with experimental data.

  **Parameters**

  *   **result** ([`Result`](qiskit.result.Result "qiskit.result.result.Result")) – a Qiskit Result object obtained from executing tomography circuits.
  *   **circuits** (`Union`\[`List`\[[`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")], `List`\[`str`]]) – a list of circuits or circuit names to extract count information from the result object.
  *   **meas\_basis** (`Union`\[`TomographyBasis`, `str`]) – (default: ‘Pauli’) A function to return measurement operators corresponding to measurement outcomes. See Additional Information.
  *   **prep\_basis** (`Union`\[`TomographyBasis`, `str`]) – (default: ‘Pauli’) A function to return preparation operators. See Additional Information

  ## Attributes

  <span id="processtomographyfitter-data" />

  ### data

  <Attribute id="qiskit.ignis.verification.ProcessTomographyFitter.data">
    Return tomography data
  </Attribute>

  <span id="processtomographyfitter-measure-basis" />

  ### measure\_basis

  <Attribute id="qiskit.ignis.verification.ProcessTomographyFitter.measure_basis">
    Return the tomography measurement basis.
  </Attribute>

  <span id="processtomographyfitter-preparation-basis" />

  ### preparation\_basis

  <Attribute id="qiskit.ignis.verification.ProcessTomographyFitter.preparation_basis">
    Return the tomography preparation basis.
  </Attribute>

  ## Methods

  <span id="processtomographyfitter-add-data" />

  ### add\_data

  <Function id="qiskit.ignis.verification.ProcessTomographyFitter.add_data" signature="ProcessTomographyFitter.add_data(result, circuits)">
    Add tomography data from a Qiskit Result object.

    **Parameters**

    *   **result** ([*Result*](qiskit.result.Result "qiskit.result.Result")) – a Qiskit Result object obtained from executing tomography circuits.
    *   **circuits** (*list*) – a list of circuits or circuit names to extract count information from the result object.
  </Function>

  <span id="processtomographyfitter-fit" />

  ### fit

  <Function id="qiskit.ignis.verification.ProcessTomographyFitter.fit" signature="ProcessTomographyFitter.fit(method='auto', standard_weights=True, beta=0.5, **kwargs)">
    Reconstruct a quantum channel using CVXPY convex optimization.

    **Choi matrix**

    The Choi matrix object is a QuantumChannel representation which may be converted to other representations using the classes SuperOp, Kraus, Stinespring, PTM, Chi from the module qiskit.quantum\_info.operators. The raw matrix data for the representation may be obtained by channel.data.

    **Fitter method**

    The `cvx` fitter method used CVXPY convex optimization package. The `lstsq` method uses least-squares fitting (linear inversion). The `auto` method will use `cvx` if the CVXPY package is found on the system, otherwise it will default to `lstsq`.

    **Objective function**

    This fitter solves the constrained least-squares minimization: $minimize: ||a \cdot x - b ||_2$

    subject to:

    > *   $x >> 0$ (PSD)
    > *   $\text{trace}(x) = \text{dim}$ (trace)
    > *   $\text{partial_trace}(x) = \text{identity}$ (trace\_preserving)

    where:

    > *   a is the matrix of measurement operators $a[i] = \text{vec}(M_i).H$
    > *   b is the vector of expectation value data for each projector $b[i] \sim \text{Tr}[M_i.H \cdot x] = (a \cdot x)[i]$
    > *   x is the vectorized Choi-matrix to be fitted

    **PSD constraint**

    The PSD keyword constrains the fitted matrix to be postive-semidefinite. For the `lstsq` fitter method the fitted matrix is rescaled using the method proposed in Reference \[1]. For the `cvx` fitter method the convex constraint makes the optimization problem a SDP. If PSD=False the fitted matrix will still be constrained to be Hermitian, but not PSD. In this case the optimization problem becomes a SOCP.

    **Trace constraint**

    The trace keyword constrains the trace of the fitted matrix. If trace=None there will be no trace constraint on the fitted matrix. This constraint should not be used for process tomography and the trace preserving constraint should be used instead.

    **Trace preserving (TP) constraint**

    The trace\_preserving keyword constrains the fitted matrix to be TP. This should only be used for process tomography, not state tomography. Note that the TP constraint implicitly enforces the trace of the fitted matrix to be equal to the square-root of the matrix dimension. If a trace constraint is also specified that differs from this value the fit will likely fail. Note that this can only be used for the CVX method.

    **CVXPY Solvers:**

    Various solvers can be called in CVXPY using the solver keyword argument. See the [CVXPY documentation](https://www.cvxpy.org/tutorial/advanced/index.html#solve-method-options) for more information on solvers.

    References:

    #### \[1] J Smolin, JM Gambetta, G Smith, Phys. Rev. Lett. 108, 070502

    (2012). Open access: arXiv:1106.5458 \[quant-ph].

    **Parameters**

    *   **method** (`str`) – (default: ‘auto’) the fitter method ‘auto’, ‘cvx’ or ‘lstsq’.
    *   **standard\_weights** (`bool`) – (default: True) apply weights to tomography data based on count probability
    *   **beta** (`float`) – (default: 0.5) hedging parameter for converting counts to probabilities
    *   **\*\*kwargs** – kwargs for fitter method.

    **Raises**

    *   **ValueError** – In case the input data is no a valid process matrix
    *   **QiskitError** – If the fit method is unrecognized

    **Returns**

    The fitted Choi-matrix J for the channel that maximizes $||\text{basis_matrix} \cdot \text{vec}(J) - \text{data}||_2$. The Numpy matrix can be obtained from Choi.data.

    **Return type**

    [Choi](qiskit.quantum_info.Choi "qiskit.quantum_info.Choi")
  </Function>

  <span id="processtomographyfitter-set-measure-basis" />

  ### set\_measure\_basis

  <Function id="qiskit.ignis.verification.ProcessTomographyFitter.set_measure_basis" signature="ProcessTomographyFitter.set_measure_basis(basis)">
    Set the measurement basis

    **Parameters**

    **basis** (`Union`\[`TomographyBasis`, `str`]) – measurement basis

    **Raises**

    **QiskitError** – In case of invalid measurement or preparation basis.
  </Function>

  <span id="processtomographyfitter-set-preparation-basis" />

  ### set\_preparation\_basis

  <Function id="qiskit.ignis.verification.ProcessTomographyFitter.set_preparation_basis" signature="ProcessTomographyFitter.set_preparation_basis(basis)">
    Set the preparation basis function

    **Parameters**

    **basis** (`Union`\[`TomographyBasis`, `str`]) – preparation basis

    **Raises**

    **QiskitError** – in case the basis has no preperation data
  </Function>
</Class>

